[WIP] Add filters
Todo : Genres filter is not working